Fix user menu button on mobile nav

--- a/app/assets/stylesheets/custom/_navigation.scss
+++ b/app/assets/stylesheets/custom/_navigation.scss
@@ -187,6 +187,10 @@
 						display:inline-block;
 						text-align: center;
 						border-top:solid 1px #DDD;
+
+						&.user{
+							width:100%;
+						}
 					}
 				}
 			}
